fix spacing issue in list view

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1588,10 +1588,6 @@ a.close-btn span {
   text-decoration: none;
 }
 
-.place-items .place-item {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 .place-items ul {
   margin: 0;
 }
